--- a/homepage.html
+++ b/homepage.html
@@ -42,7 +42,9 @@
                 <video autoplay muted loop id="socialmedia">
                     <source src="/videos/socialmedia.mp4" type="video/mp4">
                 </video>
-                <img src="/images/webdesc.png" alt="Hit Enter to interACT! logo">
+                <div id="webdesc">
+                    <img src="/images/webdesc.png" alt="Hit Enter to interACT! logo">
+                </div>
             </div>
         </div>
     </div> 
