--- a/homepage.html
+++ b/homepage.html
@@ -4,7 +4,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Josefin+Sans:wght@300&family=Poppins&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="/style.css">
+    <link rel="stylesheet" href="style.css">
     <title>EnterAct Homepage</title>
 </head>
 <body>
@@ -25,25 +25,25 @@
         <div class="content-section1">
             <div class="content-getstarted">
                 <!--Enter-Act Logo-->
-                <img src="/images/logo.png" alt="Enter-Act Logo">
+                <img src="images/logo.png" alt="Enter-Act Logo">
                 <!--Get Started Button-->
                 <div id="button">
-                    <img src="/images/Vector.png" alt="Search Logo">
+                    <img src="images/Vector.png" alt="Search Logo">
                     <span>Get Started</span>
                 </div>
             </div>
             <!--Social Media image-->
             <div class="content-mediaimg">
-                <img src="/images/media.png" alt="Social Media">
+                <img src="images/media.png" alt="Social Media">
             </div>
         </div>
         <div class="content-section2">
             <div class="content-webdescription">
                 <video autoplay muted loop id="socialmedia">
-                    <source src="/videos/socialmedia.mp4" type="video/mp4">
+                    <source src="videos/socialmedia.mp4" type="video/mp4">
                 </video>
                 <div id="webdesc">
-                    <img src="/images/webdesc.png" alt="Hit Enter to interACT! logo">
+                    <img src="images/webdesc.png" alt="Hit Enter to interACT! logo">
                 </div>
             </div>
         </div>
