--- a/blogpage.html
+++ b/blogpage.html
@@ -1,6 +1,9 @@
 <!DOCTYPE html>
 <html>
 <head>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Josefin+Sans:wght@300&family=Poppins&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
     <title>Document</title>
 </head>
@@ -13,9 +16,44 @@
                 <li>Home</li>
                 <li>My Profile</li>
                 <li>Settings</li>
-                <li>Post a Blog</li>
             </ul>
         </nav>
+        <div id="post">Post a Blog</div>
    </header> 
+   <div class="blog-content">
+        <div class="blog-trending">
+            <h1>What's Trending:</h1>
+            <img src="images/Vector1.png" alt="">
+            <div class="trending-box">
+                <!--Trending Topics-->
+                <nav>
+                    <ul>
+                        <li>COVID-19</li>
+                        <li>ONLINE GAMES</li>
+                        <li>DLSU</li>
+                    </ul>
+                </nav>
+                <hr>
+                <!--Trending Hashtags-->
+                <nav>
+                    <ul>
+                        <li>TIKTOK</li>
+                        <li>VALORANT</li>
+                        <li>SPORTS</li>
+                    </ul>
+                </nav>
+                <hr>
+                <!--Who to Follow-->
+                <h2>who to follow:</h2>
+                <nav>
+                    <ul>
+                        <li>@USERNAME03</li>
+                        <li>@USERNAME04</li>
+                        <li>@USERNAME04</li>
+                    </ul>
+                </nav>
+            </div>
+        </div>
+   </div>
 </body>
 </html>
