--- a/blogpage.html
+++ b/blogpage.html
@@ -22,7 +22,7 @@
    </header> 
    <div class="blog-content">
         <div class="blog-trending">
-            <h1>What's Trending:</h1>
+            <p>What's Trending:</p>
             <img src="images/Vector1.png" alt="">
             <div class="trending-box">
                 <!--Trending Topics-->
