--- a/blogpage.html
+++ b/blogpage.html
@@ -26,7 +26,7 @@
             <img src="images/Vector1.png" alt="">
             <div class="trending-box">
                 <!--Trending Topics-->
-                <nav>
+                <nav id="topics">
                     <ul>
                         <li>COVID-19</li>
                         <li>ONLINE GAMES</li>
@@ -35,17 +35,17 @@
                 </nav>
                 <hr>
                 <!--Trending Hashtags-->
-                <nav>
+                <nav id="hashtags">
                     <ul>
-                        <li>TIKTOK</li>
-                        <li>VALORANT</li>
-                        <li>SPORTS</li>
+                        <li>#TIKTOK</li>
+                        <li>#VALORANT</li>
+                        <li>#SPORTS</li>
                     </ul>
                 </nav>
                 <hr>
                 <!--Who to Follow-->
                 <h2>who to follow:</h2>
-                <nav>
+                <nav id="users">
                     <ul>
                         <li>@USERNAME03</li>
                         <li>@USERNAME04</li>
