--- a/signup.html
+++ b/signup.html
@@ -16,8 +16,8 @@
         <!--Content-->
         <div class="signup-box">
             <div class="signup-title">
-                <span id="enteract">ENTER-ACT</span>
-                <h1 id="tagline">Micro<br>Blogging<br>made easy.</h1>
+                <span>ENTER-ACT</span>
+                <h1>Micro<br>Blogging<br>made easy.</h1>
             </div>
             <div class="picture">
                 <img src="images/image 12.png">
@@ -25,6 +25,19 @@
             <div class="signup-form">
                 <h1>Welcome to Enter-Act!</h1>
                 <p>Register your account</p>
+                <div class="signup-fields">
+                    <form>
+                        <label for="name">Name:</label>
+                        <input type="text" id="name" name="name"><br>
+                        <label for="email">Email Address:</label>
+                        <input type="text" id="email" name="email"><br>
+                        <label for="username">Username:</label>
+                        <input type="text" id="username" name="username"><br>
+                        <label for="password">Password:</label>
+                        <input type="text" id="password" name="password"><br>
+                        <input type="button" value="Sign Up!">
+                    </form>
+                </div>
             </div>
         </div>
     </div>
