--- a/blogpage.html
+++ b/blogpage.html
@@ -54,6 +54,20 @@
                 </nav>
             </div>
         </div>
+        <div class="blog-posts">
+            <div class="blog-outerdesign">
+                <div class="blog-innerdesign">
+                    <div class="usericon">
+                        <img src="images/usericon.png" alt="User Icon">
+                    </div>
+                    <div class="username">
+                        <p>John Doe</p>
+                        <p>@USERNAME01</p>
+                    </div>
+                    <textarea name="blog-post" id="blog-post" cols="30" rows="10">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris ullamcorper id neque lorem. Amet augue orci ornare odio velit urna quis arcu. Sed justo metus, sed nam sagittis nunc egestas ac. Urna, urna sagittis nunc, iaculis lectus.</textarea>
+                </div>
+            </div>
+        </div>
    </div>
 </body>
 </html>
