--- a/blogpage.html
+++ b/blogpage.html
@@ -61,11 +61,16 @@
                         <img src="images/usericon.png" alt="User Icon">
                     </div>
                     <div class="username">
-                        <p>John Doe</p>
-                        <p>@USERNAME01</p>
+                        <p id="profile">John Doe</p>
+                        <p id="user">@USERNAME01</p>
                     </div>
-                    <textarea name="blog-post" id="blog-post" cols="30" rows="10">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris ullamcorper id neque lorem. Amet augue orci ornare odio velit urna quis arcu. Sed justo metus, sed nam sagittis nunc egestas ac. Urna, urna sagittis nunc, iaculis lectus.</textarea>
+                    <textarea name="blog-post" id="blog-post" cols="90" rows="20" placeholder="Write a post..."></textarea>
                 </div>
+                <div class="button-post">
+                    <span>Post</span>
+                </div>
+                <div class="button-cancel">CANCEL</div>
+                <div class="button-draft">SAVE TO DRAFT</div>
             </div>
         </div>
    </div>
