--- a/blogpage.html
+++ b/blogpage.html
@@ -66,11 +66,16 @@
                     </div>
                     <textarea name="blog-post" id="blog-post" cols="90" rows="20" placeholder="Write a post..."></textarea>
                 </div>
+                <!--Buttons in Posting-->
                 <div class="button-post">
                     <span>Post</span>
                 </div>
-                <div class="button-cancel">CANCEL</div>
-                <div class="button-draft">SAVE TO DRAFT</div>
+                <div class="button-cancel">
+                    <span>CANCEL</span> 
+                </div>
+                <div class="button-draft">
+                    <span>SAVE TO DRAFT</span>    
+                </div>
             </div>
         </div>
    </div>
