--- a/blogpage.html
+++ b/blogpage.html
@@ -99,6 +99,25 @@
                     </div>
                 </div>
             </div>
+            <div class="blog-highlights">
+                <div class="highlight-box">
+                    <span>Highlights:</span>
+                    <div>
+                        <img src="" alt="">
+                        <span></span>
+                    </div>
+                    <div>
+                       <img src="" alt="">
+                       <img src="" alt="">
+                       <span></span>
+                    </div>
+                    <hr>
+                    <div>
+                        <span>News:</span>
+                        <img src="" alt="">
+                    </div>
+                </div>
+            </div>
         </div>
    </div>
 </body>
