--- a/blogpage.html
+++ b/blogpage.html
@@ -101,20 +101,20 @@
             </div>
             <div class="blog-highlights">
                 <div class="highlight-box">
-                    <span>Highlights:</span>
-                    <div>
-                        <img src="" alt="">
-                        <span></span>
+                    <span id="title">Highlights:</span>
+                    <div class="highlight-sports">
+                        <img src="images/sports.png" alt="Girls playing soccer">
+                        <span>#SPORTS</span>
                     </div>
-                    <div>
-                       <img src="" alt="">
-                       <img src="" alt="">
-                       <span></span>
+                    <div class="highlight-games">
+                       <img src="images/valo1.png" alt="Valorant Image">
+                       <img src="images/valo2.png" alt="Valorant Image">
+                       <span>#GAMES</span>
                     </div>
                     <hr>
-                    <div>
+                    <div class="highlight-news">
                         <span>News:</span>
-                        <img src="" alt="">
+                        <img src="images/news.png" alt="Breaking News">
                     </div>
                 </div>
             </div>
