--- a/blogpage.html
+++ b/blogpage.html
@@ -8,6 +8,7 @@
     <title>Document</title>
 </head>
 <body>
+    <!--Navbar-->
    <header class="blog-navbar">
         <img src="images/logo2.png" alt="Enter-Act Logo">
         <span>Enter Act</span>
@@ -20,6 +21,7 @@
         </nav>
         <div id="post">Post a Blog</div>
    </header> 
+   <!--Contents of the Blog-->
    <div class="blog-content">
         <div class="blog-trending">
             <p>What's Trending:</p>
