--- a/signup.html
+++ b/signup.html
@@ -10,9 +10,9 @@
 <body>
     <!--Background-->
     <div class="signup-content">
-        <div id="ellipse1"></div>
-        <div id="ellipse2"></div>
-        <div id="ellipse3"></div>
+        <div class="signup-background">
+            <img src="images/ellipses.png">
+        </div>
         <!--Content-->
         <div class="signup-box">
             <div class="signup-title">
@@ -34,7 +34,7 @@
                         <label for="username">Username:</label>
                         <input type="text" id="username" name="username"><br>
                         <label for="password">Password:</label>
-                        <input type="text" id="password" name="password"><br>
+                        <input type="password" id="password" name="password"><br>
                         <input type="button" value="Sign Up!">
                     </form>
                 </div>
