--- a/signup.html
+++ b/signup.html
@@ -35,7 +35,7 @@
                         <input type="text" id="username" name="username"><br>
                         <label for="password">Password:</label>
                         <input type="password" id="password" name="password"><br>
-                        <input type="button" value="Sign Up!">
+                        <input type="button" value="Sign Up!" onclick='location.href="blogpage.html"'>
                     </form>
                 </div>
             </div>
