--- a/signup.html
+++ b/signup.html
@@ -38,6 +38,12 @@
                         <input type="button" value="Sign Up!" onclick='location.href="blogpage.html"'>
                     </form>
                 </div>
+                <div class="signup-alternative">
+                    <span>Sign In With:</span>
+                    <img src="images/facebook_icon.png" alt="Facebook">
+                    <img src="images/chrome_icon.png" alt="Google">
+                    <img src="images/twitter_icon.png" alt="Twitter">
+                </div>
             </div>
         </div>
     </div>
