--- a/signup.html
+++ b/signup.html
@@ -16,7 +16,7 @@
         <!--Content-->
         <div class="signup-box">
             <div class="signup-title">
-                <span>ENTER-ACT</span>
+                <span onclick='location.href="homepage.html"' title="Back to Home">ENTER-ACT</span>
                 <h1>Micro<br>Blogging<br>made easy.</h1>
             </div>
             <div class="picture">
@@ -40,9 +40,9 @@
                 </div>
                 <div class="signup-alternative">
                     <span>Sign In With:</span>
-                    <img src="images/facebook_icon.png" alt="Facebook">
-                    <img src="images/chrome_icon.png" alt="Google">
-                    <img src="images/twitter_icon.png" alt="Twitter">
+                    <img src="images/facebook_icon.png" title="Facebook">
+                    <img src="images/google_icon.png" title="Google">
+                    <img src="images/twitter_icon.png" title="Twitter">
                 </div>
             </div>
         </div>
