--- a/blogpage.html
+++ b/blogpage.html
@@ -10,7 +10,7 @@
 <body>
     <!--Navbar-->
    <header class="blog-navbar">
-        <img src="images/logo2.png" alt="Enter-Act Logo">
+        <img src="images/logo2.png" alt="Enter-Act Logo" onclick='location.href="enteract.html"'>
         <span>Enter Act</span>
         <nav>
             <ul>
@@ -49,9 +49,9 @@
                 <h2>who to follow:</h2>
                 <nav id="users">
                     <ul>
-                        <li>@USERNAME03</li>
-                        <li>@USERNAME04</li>
-                        <li>@USERNAME04</li>
+                        <li>@ValorINTEL</li>
+                        <li>@ChelDiokno</li>
+                        <li>@Itssassagurl</li>
                     </ul>
                 </nav>
             </div>
@@ -65,7 +65,7 @@
                     </div>
                     <div class="username">
                         <p id="profile">John Doe</p>
-                        <p id="user">@USERNAME01</p>
+                        <p id="user">@DohnJoe</p>
                     </div>
                     <textarea name="blog-post" id="blog-post" cols="90" rows="20" placeholder="Write a post..."></textarea>
                 </div>
@@ -89,12 +89,13 @@
                         </div>
                         <div class="username2">
                             <p id="profile2">Clark Davis</p>
-                            <p id="user2">@USERNAME02</p>
+                            <p id="user2">@ClarkDavis</p>
                         </div>
-                        <p class="post1">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris ullamcorper id neque lorem. Amet augue orci ornare odio velit urna quis arcu. Sed justo metus, sed nam sagittis nunc egestas ac. Urna, urna sagittis nunc, iaculis lectus.</p>
+                        <p class="post1">I can't believe @TenZOfficial is staying with Sentinels</p>
                     </div>
                     <div class="entry-reply1">
-                        <p>replies...</p>
+                        <p id="replyuser1">Valofan</p>
+                        <p id="reply1">Give me that copium. Sentinels are gonna win this year.</p>
                     </div>
                     <div class="entry-reply2">
                         <p>replies...</p>
