--- a/enteract.html
+++ b/enteract.html
@@ -61,7 +61,7 @@
             <img src="images/logo.png" alt="Enter-Act Logo">
 
             <!--Get Started Button-->
-            <button class="btn-hover color-9" type="button">&#x1F50D; Get Started!</button>
+            <button class="btn-hover color-9" type="button" onclick='location.href="blogpage.html"'>&#x1F50D; Get Started!</button>
             
             <!-- <div id="button">
                 <img src="images/Vector.png" alt="Search Logo">
