--- a/signup.html
+++ b/signup.html
@@ -16,7 +16,7 @@
         <!--Content-->
         <div class="signup-box">
             <div class="signup-title">
-                <span onclick='location.href="homepage.html"' title="Back to Home">ENTER-ACT</span>
+                <span onclick='location.href="enteract.html"' title="Back to Home">ENTER-ACT</span>
                 <h1>Micro<br>Blogging<br>made easy.</h1>
             </div>
             <div class="picture">
